Added Additional Scenarios (Ugly AF but whatevs)

--- a/Thesis/WTest.tex
+++ b/Thesis/WTest.tex
@@ -6,11 +6,155 @@
 \hline \\[-1.8ex] 
  & Test Statistic & p-Value \\ 
 \hline \\[-1.8ex] 
-GDP & $0$ & $0.010$ \\ 
-Investment & $2$ & $0.020$ \\ 
-ESR & $36$ & $0.010$ \\ 
-Consumption & $0$ & $0.010$ \\ 
+GDP & $14$ & $0.640$ \\ 
+Investment & $25$ & $0.380$ \\ 
+ESR & $24$ & $0.460$ \\ 
+Consumption & $12$ & $0.460$ \\ 
 CPI & $0$ & $0.010$ \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+\begin{table}[!htbp] \centering 
+  \caption{Results of Wilcoxon Signed Ranktest for Scenarios vs Baseline} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} ccc} 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+ & Test Statistic & p-Value \\ 
+\hline \\[-1.8ex] 
+GDP & $15$ & $0.740$ \\ 
+Investment & $26$ & $0.310$ \\ 
+ESR & $25$ & $0.380$ \\ 
+Consumption & $12$ & $0.460$ \\ 
+CPI & $0$ & $0.010$ \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+\begin{table}[!htbp] \centering 
+  \caption{Results of Wilcoxon Signed Ranktest for Scenarios vs Baseline} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} ccc} 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+ & Test Statistic & p-Value \\ 
+\hline \\[-1.8ex] 
+GDP & $16$ & $0.840$ \\ 
+Investment & $21$ & $0.740$ \\ 
+ESR & $25$ & $0.380$ \\ 
+Consumption & $12$ & $0.460$ \\ 
+CPI & $0$ & $0.010$ \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+\begin{table}[!htbp] \centering 
+  \caption{Results of Wilcoxon Signed Ranktest for Scenarios vs Baseline} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} ccc} 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+ & Test Statistic & p-Value \\ 
+\hline \\[-1.8ex] 
+GDP & $25$ & $0.380$ \\ 
+Investment & $10$ & $0.310$ \\ 
+ESR & $25$ & $0.380$ \\ 
+Consumption & $21$ & $0.740$ \\ 
+CPI & $15$ & $0.740$ \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+\begin{table}[!htbp] \centering 
+  \caption{Results of Wilcoxon Signed Ranktest for Scenarios vs Baseline} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} ccc} 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+ & Test Statistic & p-Value \\ 
+\hline \\[-1.8ex] 
+GDP & $25$ & $0.380$ \\ 
+Investment & $10$ & $0.310$ \\ 
+ESR & $25$ & $0.380$ \\ 
+Consumption & $21$ & $0.740$ \\ 
+CPI & $15$ & $0.740$ \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+\begin{table}[!htbp] \centering 
+  \caption{Results of Wilcoxon Signed Ranktest for Scenarios vs Baseline} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} ccc} 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+ & Test Statistic & p-Value \\ 
+\hline \\[-1.8ex] 
+GDP & $14$ & $0.640$ \\ 
+Investment & $25$ & $0.380$ \\ 
+ESR & $24$ & $0.460$ \\ 
+Consumption & $12$ & $0.460$ \\ 
+CPI & $0$ & $0.010$ \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+\begin{table}[!htbp] \centering 
+  \caption{Results of Wilcoxon Signed Ranktest for Scenarios vs Baseline} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} ccc} 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+ & Test Statistic & p-Value \\ 
+\hline \\[-1.8ex] 
+GDP & $19$ & $0.950$ \\ 
+Investment & $16$ & $0.840$ \\ 
+ESR & $18$ & $1$ \\ 
+Consumption & $18$ & $1$ \\ 
+CPI & $23$ & $0.550$ \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+\begin{table}[!htbp] \centering 
+  \caption{Results of Wilcoxon Signed Ranktest for Scenarios vs Baseline} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} ccc} 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+ & Test Statistic & p-Value \\ 
+\hline \\[-1.8ex] 
+GDP & $0$ & $0.010$ \\ 
+Investment & $8$ & $0.200$ \\ 
+ESR & $16$ & $0.840$ \\ 
+Consumption & $0$ & $0.010$ \\ 
+CPI & $16$ & $0.840$ \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+\begin{table}[!htbp] \centering 
+  \caption{Results of Wilcoxon Signed Ranktest for Scenarios vs Baseline} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} ccc} 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+ & Test Statistic & p-Value \\ 
+\hline \\[-1.8ex] 
+GDP & $14$ & $0.640$ \\ 
+Investment & $25$ & $0.380$ \\ 
+ESR & $24$ & $0.460$ \\ 
+Consumption & $12$ & $0.460$ \\ 
+CPI & $0$ & $0.010$ \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+\begin{table}[!htbp] \centering 
+  \caption{Results of Wilcoxon Signed Ranktest for Scenarios vs Baseline} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} ccc} 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+ & Test Statistic & p-Value \\ 
+\hline \\[-1.8ex] 
+GDP & $0$ & $0.010$ \\ 
+Investment & $8$ & $0.200$ \\ 
+ESR & $16$ & $0.840$ \\ 
+Consumption & $0$ & $0.010$ \\ 
+CPI & $16$ & $0.840$ \\ 
 \hline \\[-1.8ex] 
 \end{tabular} 
 \end{table}  
