Code Cleanup for Submission Cleaned up code for submission.

--- a/Thesis/JBtest.tex
+++ b/Thesis/JBtest.tex
@@ -94,3 +94,111 @@ $94.2727$ & $0$ & $10$ & JB-Test (multivariate) \\
 \hline \\[-1.8ex] 
 \end{tabular} 
 \end{table}  
+\begin{table}[!htbp] \centering 
+  \caption{Jarque-Bera Test Statistics for the dVar(3) Model} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} cccc} 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+statistic & p.value & parameter & method \\ 
+\hline \\[-1.8ex] 
+$94.2727$ & $0$ & $10$ & JB-Test (multivariate) \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+\begin{table}[!htbp] \centering 
+  \caption{Jarque-Bera Test Statistics for the dVar(3) Model} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} cccc} 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+statistic & p.value & parameter & method \\ 
+\hline \\[-1.8ex] 
+$94.2727$ & $0$ & $10$ & JB-Test (multivariate) \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+\begin{table}[!htbp] \centering 
+  \caption{Jarque-Bera Test Statistics for the dVar(3) Model} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} cccc} 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+statistic & p.value & parameter & method \\ 
+\hline \\[-1.8ex] 
+$94.2727$ & $0$ & $10$ & JB-Test (multivariate) \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+\begin{table}[!htbp] \centering 
+  \caption{Jarque-Bera Test Statistics for the dVar(3) Model} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} cccc} 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+statistic & p.value & parameter & method \\ 
+\hline \\[-1.8ex] 
+$94.2727$ & $0$ & $10$ & JB-Test (multivariate) \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+\begin{table}[!htbp] \centering 
+  \caption{Jarque-Bera Test Statistics for the dVar(3) Model} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} cccc} 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+statistic & p.value & parameter & method \\ 
+\hline \\[-1.8ex] 
+$94.2727$ & $0$ & $10$ & JB-Test (multivariate) \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+\begin{table}[!htbp] \centering 
+  \caption{Jarque-Bera Test Statistics for the dVar(3) Model} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} cccc} 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+statistic & p.value & parameter & method \\ 
+\hline \\[-1.8ex] 
+$94.2727$ & $0$ & $10$ & JB-Test (multivariate) \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+\begin{table}[!htbp] \centering 
+  \caption{Jarque-Bera Test Statistics for the dVar(3) Model} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} cccc} 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+statistic & p.value & parameter & method \\ 
+\hline \\[-1.8ex] 
+$94.2727$ & $0$ & $10$ & JB-Test (multivariate) \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+\begin{table}[!htbp] \centering 
+  \caption{Jarque-Bera Test Statistics for the dVar(3) Model} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} cccc} 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+statistic & p.value & parameter & method \\ 
+\hline \\[-1.8ex] 
+$94.2727$ & $0$ & $10$ & JB-Test (multivariate) \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+\begin{table}[!htbp] \centering 
+  \caption{Jarque-Bera Test Statistics for the dVar(3) Model} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} cccc} 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+statistic & p.value & parameter & method \\ 
+\hline \\[-1.8ex] 
+$94.2727$ & $0$ & $10$ & JB-Test (multivariate) \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
