Fixed Graph Bug Also added latex files.

--- a/Thesis/skewness.tex
+++ b/Thesis/skewness.tex
@@ -219,3 +219,185 @@
 \hline \\[-1.8ex] 
 \end{tabular} 
 \end{table}  
+% Requires LaTeX packages: dcolumn 
+\begin{table}[!htbp] \centering 
+  \caption{Skewness Test Statistics for the dVar(3) Model} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} } 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+\multicolumn{1}{c}{statistic} & \multicolumn{1}{c}{p.value} & \multicolumn{1}{c}{parameter} & \multicolumn{1}{c}{method} \\ 
+\hline \\[-1.8ex] 
+11.8222 & 0.0373 & 5 & \multicolumn{1}{c}{Skewness only (multivariate)} \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+% Requires LaTeX packages: dcolumn 
+\begin{table}[!htbp] \centering 
+  \caption{Skewness Test Statistics for the dVar(3) Model} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} } 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+\multicolumn{1}{c}{statistic} & \multicolumn{1}{c}{p.value} & \multicolumn{1}{c}{parameter} & \multicolumn{1}{c}{method} \\ 
+\hline \\[-1.8ex] 
+11.8222 & 0.0373 & 5 & \multicolumn{1}{c}{Skewness only (multivariate)} \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+% Requires LaTeX packages: dcolumn 
+\begin{table}[!htbp] \centering 
+  \caption{Skewness Test Statistics for the dVar(3) Model} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} } 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+\multicolumn{1}{c}{statistic} & \multicolumn{1}{c}{p.value} & \multicolumn{1}{c}{parameter} & \multicolumn{1}{c}{method} \\ 
+\hline \\[-1.8ex] 
+11.8222 & 0.0373 & 5 & \multicolumn{1}{c}{Skewness only (multivariate)} \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+% Requires LaTeX packages: dcolumn 
+\begin{table}[!htbp] \centering 
+  \caption{Skewness Test Statistics for the dVar(3) Model} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} } 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+\multicolumn{1}{c}{statistic} & \multicolumn{1}{c}{p.value} & \multicolumn{1}{c}{parameter} & \multicolumn{1}{c}{method} \\ 
+\hline \\[-1.8ex] 
+11.8222 & 0.0373 & 5 & \multicolumn{1}{c}{Skewness only (multivariate)} \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+% Requires LaTeX packages: dcolumn 
+\begin{table}[!htbp] \centering 
+  \caption{Skewness Test Statistics for the dVar(3) Model} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} } 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+\multicolumn{1}{c}{statistic} & \multicolumn{1}{c}{p.value} & \multicolumn{1}{c}{parameter} & \multicolumn{1}{c}{method} \\ 
+\hline \\[-1.8ex] 
+11.8222 & 0.0373 & 5 & \multicolumn{1}{c}{Skewness only (multivariate)} \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+% Requires LaTeX packages: dcolumn 
+\begin{table}[!htbp] \centering 
+  \caption{Skewness Test Statistics for the dVar(3) Model} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} } 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+\multicolumn{1}{c}{statistic} & \multicolumn{1}{c}{p.value} & \multicolumn{1}{c}{parameter} & \multicolumn{1}{c}{method} \\ 
+\hline \\[-1.8ex] 
+11.8222 & 0.0373 & 5 & \multicolumn{1}{c}{Skewness only (multivariate)} \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+% Requires LaTeX packages: dcolumn 
+\begin{table}[!htbp] \centering 
+  \caption{Skewness Test Statistics for the dVar(3) Model} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} } 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+\multicolumn{1}{c}{statistic} & \multicolumn{1}{c}{p.value} & \multicolumn{1}{c}{parameter} & \multicolumn{1}{c}{method} \\ 
+\hline \\[-1.8ex] 
+11.8222 & 0.0373 & 5 & \multicolumn{1}{c}{Skewness only (multivariate)} \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+% Requires LaTeX packages: dcolumn 
+\begin{table}[!htbp] \centering 
+  \caption{Skewness Test Statistics for the dVar(3) Model} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} } 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+\multicolumn{1}{c}{statistic} & \multicolumn{1}{c}{p.value} & \multicolumn{1}{c}{parameter} & \multicolumn{1}{c}{method} \\ 
+\hline \\[-1.8ex] 
+11.8222 & 0.0373 & 5 & \multicolumn{1}{c}{Skewness only (multivariate)} \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+% Requires LaTeX packages: dcolumn 
+\begin{table}[!htbp] \centering 
+  \caption{Skewness Test Statistics for the dVar(3) Model} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} } 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+\multicolumn{1}{c}{statistic} & \multicolumn{1}{c}{p.value} & \multicolumn{1}{c}{parameter} & \multicolumn{1}{c}{method} \\ 
+\hline \\[-1.8ex] 
+11.8222 & 0.0373 & 5 & \multicolumn{1}{c}{Skewness only (multivariate)} \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+% Requires LaTeX packages: dcolumn 
+\begin{table}[!htbp] \centering 
+  \caption{Skewness Test Statistics for the dVar(3) Model} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} } 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+\multicolumn{1}{c}{statistic} & \multicolumn{1}{c}{p.value} & \multicolumn{1}{c}{parameter} & \multicolumn{1}{c}{method} \\ 
+\hline \\[-1.8ex] 
+11.8222 & 0.0373 & 5 & \multicolumn{1}{c}{Skewness only (multivariate)} \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+% Requires LaTeX packages: dcolumn 
+\begin{table}[!htbp] \centering 
+  \caption{Skewness Test Statistics for the dVar(3) Model} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} } 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+\multicolumn{1}{c}{statistic} & \multicolumn{1}{c}{p.value} & \multicolumn{1}{c}{parameter} & \multicolumn{1}{c}{method} \\ 
+\hline \\[-1.8ex] 
+11.8222 & 0.0373 & 5 & \multicolumn{1}{c}{Skewness only (multivariate)} \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+% Requires LaTeX packages: dcolumn 
+\begin{table}[!htbp] \centering 
+  \caption{Skewness Test Statistics for the dVar(3) Model} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} } 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+\multicolumn{1}{c}{statistic} & \multicolumn{1}{c}{p.value} & \multicolumn{1}{c}{parameter} & \multicolumn{1}{c}{method} \\ 
+\hline \\[-1.8ex] 
+11.8222 & 0.0373 & 5 & \multicolumn{1}{c}{Skewness only (multivariate)} \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+% Requires LaTeX packages: dcolumn 
+\begin{table}[!htbp] \centering 
+  \caption{Skewness Test Statistics for the dVar(3) Model} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} } 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+\multicolumn{1}{c}{statistic} & \multicolumn{1}{c}{p.value} & \multicolumn{1}{c}{parameter} & \multicolumn{1}{c}{method} \\ 
+\hline \\[-1.8ex] 
+11.8222 & 0.0373 & 5 & \multicolumn{1}{c}{Skewness only (multivariate)} \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+% Requires LaTeX packages: dcolumn 
+\begin{table}[!htbp] \centering 
+  \caption{Skewness Test Statistics for the dVar(3) Model} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} } 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+\multicolumn{1}{c}{statistic} & \multicolumn{1}{c}{p.value} & \multicolumn{1}{c}{parameter} & \multicolumn{1}{c}{method} \\ 
+\hline \\[-1.8ex] 
+11.8222 & 0.0373 & 5 & \multicolumn{1}{c}{Skewness only (multivariate)} \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
