Cleanup for submission

--- a/Thesis/kurtosis.tex
+++ b/Thesis/kurtosis.tex
@@ -401,3 +401,55 @@
 \hline \\[-1.8ex] 
 \end{tabular} 
 \end{table}  
+% Requires LaTeX packages: dcolumn 
+\begin{table}[!htbp] \centering 
+  \caption{Kurtosis Test Statistics for the dVar(3) Model} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} } 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+\multicolumn{1}{c}{statistic} & \multicolumn{1}{c}{p.value} & \multicolumn{1}{c}{parameter} & \multicolumn{1}{c}{method} \\ 
+\hline \\[-1.8ex] 
+82.4505 & 0 & 5 & \multicolumn{1}{c}{Kurtosis only (multivariate)} \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+% Requires LaTeX packages: dcolumn 
+\begin{table}[!htbp] \centering 
+  \caption{Kurtosis Test Statistics for the dVar(3) Model} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} } 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+\multicolumn{1}{c}{statistic} & \multicolumn{1}{c}{p.value} & \multicolumn{1}{c}{parameter} & \multicolumn{1}{c}{method} \\ 
+\hline \\[-1.8ex] 
+82.4505 & 0 & 5 & \multicolumn{1}{c}{Kurtosis only (multivariate)} \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+% Requires LaTeX packages: dcolumn 
+\begin{table}[!htbp] \centering 
+  \caption{Kurtosis Test Statistics for the dVar(3) Model} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} } 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+\multicolumn{1}{c}{statistic} & \multicolumn{1}{c}{p.value} & \multicolumn{1}{c}{parameter} & \multicolumn{1}{c}{method} \\ 
+\hline \\[-1.8ex] 
+82.4505 & 0 & 5 & \multicolumn{1}{c}{Kurtosis only (multivariate)} \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
+% Requires LaTeX packages: dcolumn 
+\begin{table}[!htbp] \centering 
+  \caption{Kurtosis Test Statistics for the dVar(3) Model} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} D{.}{.}{-4} } 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+\multicolumn{1}{c}{statistic} & \multicolumn{1}{c}{p.value} & \multicolumn{1}{c}{parameter} & \multicolumn{1}{c}{method} \\ 
+\hline \\[-1.8ex] 
+82.4505 & 0 & 5 & \multicolumn{1}{c}{Kurtosis only (multivariate)} \\ 
+\hline \\[-1.8ex] 
+\end{tabular} 
+\end{table}  
